--- a/index.html
+++ b/index.html
@@ -1,1 +1,167 @@
-<img src="assets/images/project_ocean_logo.png" alt="Project Ocean Logo" width="200">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Project Ocean™</title>
+  <meta name="description" content="To guide the world’s evolution toward emotionally-aware intelligence. Your Memory. Your Control." />
+  <link rel="canonical" href="https://projectocean.dev/" />
+
+  <style>
+    :root{
+      --bg:#0a0f16;
+      --ink:#e8edf3;
+      --muted:#9fb3c8;
+      --accent:#76c7ff;
+      --accent-2:#7ed0ff33;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      color:var(--ink);
+      background:var(--bg);
+      font-family: "Aileron", -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, "Helvetica Neue", Arial, "Noto Sans", Ubuntu, "Cantarell", sans-serif;
+      line-height:1.55;
+      overflow-x:hidden;
+    }
+
+    .ocean{
+      position:fixed; inset:0; z-index:-2;
+      background:
+        radial-gradient(120% 60% at 50% 120%, #000000 10%, transparent 60%),
+        radial-gradient(120% 60% at 50% -20%, #0c141f 10%, transparent 60%),
+        linear-gradient(180deg, #0b1119 0%, #0a0f16 60%, #070c12 100%);
+    }
+    .wave{
+      position:fixed; inset:-10% -10% -10% -10%; z-index:-1;
+      background:
+        repeating-radial-gradient( circle at 50% 30%, rgba(126,208,255,.08) 0 2px, transparent 2px 6px);
+      mix-blend-mode:screen;
+      animation: drift 18s linear infinite;
+      opacity:.25;
+      filter: blur(1.5px);
+    }
+    .wave:nth-child(2){ animation-duration:26s; opacity:.18; }
+    .wave:nth-child(3){ animation-duration:34s; opacity:.12; }
+
+    @keyframes drift{
+      0%   { transform: translate3d(0,0,0) scale(1.02); }
+      50%  { transform: translate3d(0,-1.8%,0) scale(1.03); }
+      100% { transform: translate3d(0,0,0) scale(1.02); }
+    }
+
+    header{
+      width:100%;
+      padding:28px 24px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .brand{
+      font-weight:700; letter-spacing:.16rem; text-transform:uppercase;
+      font-size: clamp(20px, 1.8vw + 12px, 28px);
+      display:flex; gap:.65rem; align-items:center;
+    }
+    .mark{
+      width:28px; height:28px; border-radius:50%;
+      background: radial-gradient(circle at 35% 35%, #fff 0 6px, #1a2735 8px 14px, #3b5a7b 16px, transparent 18px),
+                  radial-gradient(60% 60% at 30% 70%, rgba(118,199,255,.15), transparent 70%);
+      box-shadow: 0 0 18px #7ed0ff33, inset 0 0 18px #7ed0ff1f;
+    }
+
+    .wrap{ max-width:1080px; margin:0 auto; padding:0 24px; }
+    .hero{
+      text-align:center;
+      padding: min(11vh,100px) 0 min(12vh,120px);
+    }
+    h1{
+      margin:0 0 12px;
+      font-size: clamp(28px, 5.2vw, 60px);
+      font-weight:800;
+      letter-spacing:.02em;
+    }
+    .tagline{
+      font-size: clamp(16px, 2.2vw, 22px);
+      color:var(--muted);
+      margin: 8px auto 26px;
+      max-width: 860px;
+    }
+    .ethics{
+      margin-top:10px;
+      font-weight:600;
+      color:var(--ink);
+      letter-spacing:.02em;
+    }
+
+    .cta{
+      margin-top:28px;
+      display:inline-block;
+      padding:14px 18px;
+      border-radius:14px;
+      border:1px solid #2a3a4f;
+      background: linear-gradient(180deg, #0f1823, #0a1119);
+      box-shadow: 0 10px 30px #0009, inset 0 0 0 1px #233246;
+      text-decoration:none;
+      color:var(--ink);
+      font-weight:700;
+    }
+    .cta small{ color:var(--muted); font-weight:500; margin-left:.5rem }
+
+    footer{
+      border-top:1px solid #14202e;
+      background: linear-gradient(180deg, rgba(126,208,255,.05), transparent 40%),
+                  linear-gradient(180deg, #0a0f16, #090e14);
+      padding:28px 24px 40px;
+      color:var(--muted);
+    }
+    .foot{
+      display:flex; flex-wrap:wrap; gap:16px; align-items:center; justify-content:center;
+      font-size:15px;
+    }
+    .dot{ opacity:.4; margin:0 .5rem }
+    a{ color:var(--accent); text-decoration:none }
+    a:hover{ text-decoration:underline }
+  </style>
+</head>
+<body>
+  <div class="ocean" aria-hidden="true"></div>
+  <div class="wave" aria-hidden="true"></div>
+  <div class="wave" aria-hidden="true"></div>
+  <div class="wave" aria-hidden="true"></div>
+
+  <header>
+    <div class="brand">
+      <span class="mark" aria-hidden="true"></span>
+      <span>Project&nbsp;Ocean™</span>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="hero">
+      <h1>Humanity’s next wave of intelligence.</h1>
+      <p class="tagline">
+        To guide the world’s evolution toward emotionally-aware intelligence.
+        <br />
+        <span class="ethics">Your Memory. Your Control.</span>
+      </p>
+      <a class="cta" href="#" aria-disabled="true">
+        Launches&nbsp;2026 <small>(preview)</small>
+      </a>
+    </section>
+  </main>
+
+  <footer>
+    <div class="wrap foot">
+      <span>© 2025 Project Ocean™</span>
+      <span class="dot">•</span>
+      <a href="mailto:sarah@projectocean.dev">sarah@projectocean.dev</a>
+      <span class="dot">•</span>
+      <a href="https://www.linkedin.com/in/sarah-carmody-project-ocean" target="_blank" rel="noopener">LinkedIn</a>
+      <span class="dot">•</span>
+      <span>Palo Alto, California</span>
+    </div>
+  </footer>
+</body>
+</html>
