--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Project Ocean — Humanity’s next wave of intelligence</title>
+  <!-- Open Graph Meta -->
+<meta property="og:title" content="Project Ocean — Humanity’s Next Wave of Intelligence">
+<meta property="og:description" content="Emotionally-aware AI. Privacy-first. Memory under your control.">
+<meta property="og:image" content="assets/og-cover.webp">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://projectocean.dev">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="assets/og-cover.webp">
+<meta name="twitter:title" content="Project Ocean — Humanity’s Next Wave of Intelligence">
+<meta name="twitter:description" content="Emotionally-aware AI. Privacy-first. Memory under your control.">
   <meta name="description" content="Emotionally-aware, privacy-first intelligence. A sovereignty layer where memory is private, agency is respected, and alignment is earned." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
