--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!-- Open Graph / Social Preview -->
+<meta property="og:title" content="Project Ocean — Humanity’s Next Wave of Intelligence" />
+<meta property="og:description" content="To guide humanity’s evolution toward emotionally-aware intelligence — where memory is private, agency is respected, and alignment is earned." />
+<meta property="og:image" content="assets/og-cover.webp" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.projectocean.ai" />
+<meta name="twitter:card" content="summary_large_image" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Project Ocean — Humanity’s next wave of intelligence</title>
   <!-- Open Graph Meta -->
