--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
     <a href="#request-access" class="cta-button">Request Private Preview</a>
   </div>
 </section>
+    <!-- Mission Section -->
+<section id="mission" class="bg-gradient-to-b from-[#021B33] to-[#0E4C5F] py-24 px-8 md:px-16 text-center text-white">
+  <h2 class="text-3xl md:text-4xl font-semibold mb-6">
+    Guiding the World’s Evolution Toward Emotionally-Aware Intelligence
+  </h2>
+  <p class="max-w-4xl mx-auto text-lg opacity-80 leading-relaxed">
+    Project Ocean is a sovereignty layer for humans and AI — where memory is private,
+    agency is respected, and alignment is earned. We’re building technology that honors the human spirit while advancing the next wave of intelligence.
+  </p>
+</section>
     a{color:var(--link); text-decoration:none}
     a:hover{text-decoration:underline}
     .wrap{width:min(1200px, 92vw); margin:0 auto}
