--- a/index.html
+++ b/index.html
@@ -385,7 +385,45 @@
       </div>
     </div>
   </section>
+<!-- Signature / Contact Card -->
+<section class="sig-wrap" id="contact">
+  <div class="sig-card">
+    <header class="sig-top">
+      <div class="sig-brand">Project Ocean</div>
+      <div class="sig-controls" aria-hidden="true">➜</div>
+    </header>
 
+    <div class="sig-main">
+      <div class="sig-name">
+        <h2>Sarah<br><span>Carmody</span></h2>
+        <p class="sig-title">Founder &amp; Vision Architect</p>
+      </div>
+
+      <figure class="sig-avatar">
+        <img src="assets/avatar.jpg" alt="Photo of Sarah Carmody" loading="lazy">
+      </figure>
+    </div>
+
+    <div class="sig-grid">
+      <div class="sig-cell">
+        <div class="sig-label">Location</div>
+        <a href="https://maps.apple.com/?q=Palo+Alto,+CA" target="_blank" rel="noopener">Palo Alto, CA</a>
+      </div>
+      <div class="sig-cell">
+        <div class="sig-label">Phone</div>
+        <a href="tel:+16503089993">650&nbsp;308-9993</a>
+      </div>
+      <div class="sig-cell">
+        <div class="sig-label">Website</div>
+        <a href="https://projectocean.ai">projectocean.ai</a>
+      </div>
+      <div class="sig-cell">
+        <div class="sig-label">Email</div>
+        <a href="mailto:sarah@projectocean.ai">sarah@projectocean.ai</a>
+      </div>
+    </div>
+  </div>
+</section>
   <footer>
     <div class="wrap foot fade">
       <span>© 2025 Project Ocean™</span>
