--- a/index.html
+++ b/index.html
@@ -281,6 +281,78 @@
       .founder{grid-template-columns:1fr}
       .compare{grid-template-columns:1fr}
       .slide img{height:300px}
+      /* Signature / Contact Card */
+.sig-wrap{
+  padding: 32px 0 64px;
+  background: transparent; /* keeps your page background */
+}
+.sig-card{
+  max-width: 1100px;
+  margin: 0 auto;
+  background: #f3f5f7;
+  color: #0d1117;
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.25);
+  border: 1px solid rgba(0,0,0,.08);
+  overflow: hidden;
+}
+@media (prefers-color-scheme: dark){
+  .sig-card{ background:#eef1f4; color:#06080a; }
+}
+.sig-top{
+  display:flex; align-items:center; justify-content:space-between;
+  padding: 18px 24px;
+  border-bottom: 1px solid rgba(0,0,0,.08);
+}
+.sig-brand{
+  font-weight: 700; letter-spacing:.2px; font-size: 18px;
+  text-shadow: 0 1px 0 #fff;
+}
+.sig-controls{ opacity:.5; font-size: 20px; }
+
+.sig-main{
+  display:grid; gap: 24px;
+  grid-template-columns: 1fr 240px;
+  align-items:center;
+  padding: 28px 24px;
+}
+.sig-name h2{
+  font-size: clamp(42px, 7vw, 80px);
+  line-height: .95;
+  margin: 0;
+  font-weight: 900;
+  letter-spacing: -1px;
+  text-shadow: 0 2px 0 #fff;
+}
+.sig-name h2 span{ font-weight: 900; }
+.sig-title{
+  margin-top: 12px;
+  font-weight: 600;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  opacity:.8;
+}
+
+.sig-avatar{
+  margin:0; justify-self:end; width: 240px; height: 240px;
+  border-radius: 50%; overflow:hidden;
+  background: #dfe6ee;
+  border: 1px solid rgba(0,0,0,.08);
+}
+.sig-avatar img{
+  width:100%; height:100%; object-fit: cover; display:block;
+  filter: contrast(1.05) saturate(1.02);
+}
+
+.sig-grid{
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0;
+  border-top: 1px solid rgba(0,0,0,.08);
+  background: #f7f9fb;
+}
+.sig-cell{
+  padding:
     }
   </style>
 </head>
