--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
     Project Ocean is a sovereignty layer for humans and AI — where memory is private,
     agency is respected, and alignment is earned. We’re building technology that honors the human spirit while advancing the next wave of intelligence.
   </p>
+    <section class="diagram">
+  <h2>Architecture Overview</h2>
+  <p>The foundation of Project Ocean — a Human–AI synergy framework built on trust, continuity, and emotional intelligence.</p>
+  <img src="assets/architecture-diagram.png" alt="Project Ocean Architecture Diagram">
+</section>
 </section>
     a{color:var(--link); text-decoration:none}
     a:hover{text-decoration:underline}
