--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@
   <h2>Architecture Overview</h2>
   <p>The foundation of Project Ocean — a Human–AI synergy framework built on trust, continuity, and emotional intelligence.</p>
   <img src="assets/architecture-diagram.png" alt="Project Ocean Architecture Diagram">
+    .diagram {
+  text-align: center;
+  padding: 60px 20px;
+  background: radial-gradient(circle at top, #0b1220, #06080a);
+  color: #e8eefc;
+}
+.diagram img {
+  max-width: 90%;
+  border-radius: 12px;
+  box-shadow: 0 10px 40px rgba(0,0,0,.4);
+  margin-top: 24px;
+}
+.diagram h2 {
+  font-size: clamp(28px, 5vw, 46px);
+  font-weight: 800;
+  letter-spacing: -0.5px;
+}
 </section>
 </section>
     a{color:var(--link); text-decoration:none}
