--- a/index.html
+++ b/index.html
@@ -425,6 +425,10 @@
     <div class="wrap founder">
       <div class="fade">
         <h2>Founder &amp; Vision Architect</h2>
+        <section class="roadmap">
+  <h2>Project Ocean Roadmap</h2>
+  <img src="assets/roadmap-phase1.png" alt="Project Ocean Roadmap - Phase 1">
+        </section>
         <p class="quote">“We’re not building tools — we’re building trust.”</p>
         <p class="muted">Sarah Carmody, Founder of Project Ocean. Designing emotionally-aware intelligence that remembers the person, not just the task.</p>
         <div class="buttons" id="investor">
