--- a/index.html
+++ b/index.html
@@ -280,7 +280,21 @@
     }
     .tile img{width:100%; height:100%; object-fit:cover; display:block; transition:transform .35s ease}
     .tile:hover img{transform:scale(1.03)}
+/* === Visual sections === */
+.section-pad{padding:60px 20px}
+.section-dark{background:#0b1220;color:#e8eefc}
+.section-center{text-align:center}
+.figure-img{max-width:95%;border-radius:12px;box-shadow:0 10px 40px rgba(0,0,0,.45)}
+.section-title{font-size:clamp(28px,5vw,46px);font-weight:800;letter-spacing:-.3px;margin:0 0 18px}
+.section-sub{max-width:900px;margin:0 auto 28px;color:#bcd0ff}
 
+/* Poster full-bleed */
+.poster img{width:100%;display:block;border-radius:0}
+
+/* Responsive tweak */
+@media (max-width:900px){
+  .figure-img{max-width:100%}
+}
     /* Lightbox */
     .lightbox{
       position:fixed; inset:0; background:#000c; display:none; align-items:center; justify-content:center;
