--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
+      margin:0;]
       font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       background: radial-gradient(1200px 600px at 15% 10%, #0f1a28 0%, transparent 60%) ,
                   radial-gradient(1000px 500px at 80% 0%, #0c1624 0%, transparent 60%) ,
@@ -226,6 +226,34 @@
       background:linear-gradient(180deg, #0d1420, #0b121d);
       border:1px solid #2b84ff22; border-radius:16px; box-shadow:var(--shadow);
     }
+    <!-- Architecture -->
+<section class="section-dark section-pad section-center" id="architecture">
+  <h2 class="section-title">Architecture Overview</h2>
+  <p class="section-sub">
+    The foundation of Project Ocean — a Human–AI synergy framework built on trust, continuity, and emotional intelligence.
+  </p>
+  <img class="figure-img" src="assets/architecture-diagram.png" alt="Project Ocean Architecture Diagram" loading="lazy">
+</section>
+
+<!-- Roadmap -->
+<section class="section-dark section-pad section-center" id="roadmap" style="background:#08101c;">
+  <h2 class="section-title">Project Ocean Roadmap</h2>
+  <img class="figure-img" src="assets/roadmap-phase1.png" alt="Project Ocean Roadmap — Phase 1" loading="lazy">
+</section>
+
+<!-- Poster -->
+<section class="poster" id="poster">
+  <img src="assets/ocean-never-forgets.png" alt="Project Ocean Poster — The Ocean Never Forgets" loading="lazy">
+</section>
+
+<!-- Reflective Memory Flow -->
+<section class="section-dark section-pad section-center" id="memory-flow">
+  <h2 class="section-title">Reflective Memory Flow</h2>
+  <p class="section-sub">
+    How journals, signals, and dialog become secure, time-indexed memory and practical outputs.
+  </p>
+  <img class="figure-img" src="assets/reflective-memory-flow.png" alt="Project Ocean Reflective Memory Flow Diagram" loading="lazy">
+</section>
 
     /* Carousel (scroll-snap) */
     .carousel{
