--- a/index.html
+++ b/index.html
@@ -234,7 +234,19 @@
   </p>
   <img class="figure-img" src="assets/architecture-diagram.png" alt="Project Ocean Architecture Diagram" loading="lazy">
 </section>
-
+<!-- Reflection Demo -->
+<section class="section-dark section-pad">
+  <h2 class="section-title">Try a 10-Second Reflection</h2>
+  <p class="section-sub">
+    Type a sentence; Ocean mirrors back what matters — privately, on-device.
+  </p>
+  <div class="wrap">
+    <input id="reflect-in" aria-label="Reflection input"
+           placeholder="e.g., I feel excited but overwhelmed about launch">
+    <button id="reflect-btn" class="cta">Reflect</button>
+    <p id="reflect-out" class="muted" style="margin-top:12px;"></p>
+  </div>
+</section>
 <!-- Roadmap -->
 <section class="section-dark section-pad section-center" id="roadmap" style="background:#08101c;">
   <h2 class="section-title">Project Ocean Roadmap</h2>
