--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <img class="figure-img" src="assets/architecture-diagram.png" alt="Project Ocean Architecture Diagram" loading="lazy">
 </section>
 <!-- Reflection Demo -->
-<section class="section-dark section-pad">
+<section class="section-dark section-pad reflect">
   <h2 class="section-title">Try a 10-Second Reflection</h2>
   <p class="section-sub">
     Type a sentence; Ocean mirrors back what matters — privately, on-device.
