--- a/index.html
+++ b/index.html
@@ -552,6 +552,30 @@
       <h2 class="fade">Visuals</h2>
       <p class="muted fade">Tap any image to view full screen.</p>
       <div class="grid fade" id="gallery">
+       // Hero parallax + magnetic buttons
+(()=>{
+  const hero = document.querySelector('.hero .wrap');
+  if(hero){
+    addEventListener('mousemove', e=>{
+      const r = hero.getBoundingClientRect();
+      const cx = (e.clientX - (r.left + r.width/2)) / r.width;
+      const cy = (e.clientY - (r.top + r.height/2)) / r.height;
+      hero.style.transform = `rotateX(${ -cy*4 }deg) rotateY(${ cx*6 }deg) translateZ(0)`;
+    }, {passive:true});
+    addEventListener('mouseleave', ()=> hero.style.transform = '', {passive:true});
+  }
+  document.querySelectorAll('.cta, .cta.ghost').forEach(btn=>{
+    btn.addEventListener('mousemove', (e)=>{
+      const r = btn.getBoundingClientRect();
+      btn.style.setProperty('--mx', ((e.clientX-r.left)/r.width*100)+'%');
+      btn.style.setProperty('--my', ((e.clientY-r.top)/r.height*100)+'%');
+      const dx = (e.clientX - (r.left+r.width/2))*0.12;
+      const dy = (e.clientY - (r.top+r.height/2))*0.12;
+      btn.style.transform = `translate(${dx}px, ${dy}px)`;
+    });
+    btn.addEventListener('mouseleave', ()=> btn.style.transform = '');
+  });
+})();
         <!-- Use your assets; add or remove tiles freely -->
         <div class="tile"><img src="assets/hero.jpg" alt="Hero — Human & AI connection"></div>
         <div class="tile"><img src="assets/circular-milestone.jpg" alt="Circular milestone graphic"></div>
